# ZhiXing-travel-ai-agent

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  skills-lock.json
.claude/: settings.local.json
app/: config.py
app/api/: app.py
app/core/: checkpointer.py  database.py  memory_store.py  middleware.py  state.py  transport_state.py
app/mcp_core/: client.py
app/rag/: __init__.py  document_loader.py  pipeline.py  query_optimizer.py  reranker.py  retriever.py  text_splitter.py
app/schemas/: auth.py  chat.py  conversation.py  message.py  user.py
app/static/: index.html
app/tools/: __init__.py  accommodation_tools.py  budget_tools.py  food_tools.py  memory_tools.py  order_tools.py  router_query.py  state_transition.py  transport_tools.py  utility_tools.py
app/utils/: logger.py
scripts/: init_db.py  init_rag.py  test_llm.py  test_rag.py  test_rag_pipeline.py
tests/: handoffs_flow_test.py
tests/agents/: __init__.py  test_context_compression.py  test_middleware.py
tests/api/: test_api_schemas.py
tests/interactive/: __init__.py  interactive_accommodation.py  interactive_destination.py  interactive_flow.py  interactive_food.py  interactive_llm.py  interactive_mcp.py  interactive_rag.py  interactive_search.py  interactive_transport.py  interactive_weather.py
tests/rag/: __init__.py  test_query_optimizer.py  test_reranker.py  test_retriever.py
tests/test_agents/: test_context_compression.py  test_destination_router.py
tests/test_api/: test_food_tool.py
tests/test_mcp/: test_accommodation.py  test_budget_and_order.py  test_client.py  test_food.py  (+4 more)
(+76 files in other folders)
