[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-travel-planner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # 核心框架
    "langchain==1.2.0",
    "langchain-community==0.4.1",
    "langchain-core~=1.2.7",
    "langgraph==1.0.5",
    "langgraph-checkpoint==3.0.1",
    "langgraph-checkpoint-postgres==3.0.2",
    "langsmith==0.4.59",

    # LLM 集成
    "dashscope==1.25.4",

    # 数据库
    "psycopg[binary,pool]==3.3.2",
    "redis==5.0.0",
    "chromadb>=1.5.0",

    # Web 框架
    "fastapi==0.124.4",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "python-multipart==0.0.20",
    "aiofiles==24.1.0",

    # RAG 相关
    "langchain-chroma>=0.1.4",
    "sentence-transformers==3.3.0",
    "rank-bm25==0.2.2",
    "jieba==0.42.1",

    # MCP 相关
    "langchain-mcp-adapters==0.2.1",
    "fastmcp==2.13.1",

    # 工具库
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "tenacity==9.1.2",
    "httpx==0.28.1",
    "aiohttp==3.13.2",

    # 监控与日志
    "loguru==0.7.2",
    "prometheus-client==0.21.0",

    # 其他依赖
    "SQLAlchemy~=2.0.45",
    "langchain-text-splitters~=1.1.0",
    "typing_extensions~=4.15.0",
    "Jinja2~=3.1.6",
    "psycopg-pool~=3.3.0",
    "bcrypt~=5.0.0",
    "PyJWT~=2.10.1",
    "langchain-openai~=1.1.7",
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]